添加测试模块